--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>SoundCloud Instant</title>
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
 </head>
@@ -22,7 +22,7 @@
 		<div id="sounds"></div>
 	</div>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="assets/js/script.js"></script>
+	<script src="js/script.js"></script>
 	<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-39495557-1']);
