--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 	<div id="navbar">
 	<div class="wrapper">
+		<div class="playPauseToggle">Play</div>
 		<form id="search"  action="javascript:void(0);">
 			<input id="q" name="q" autofocus="true" autocomplete="off" placeholder="Search SoundCloud">
 			<input type="hidden" name="client_id" value="0bcc7c4bcd2b5b55b23ab538c02f70c0">
 			<input type="hidden" name="order" value="hotness">
-			<input type="hidden" name="streamable" value="true">
 		</form>
 	</div>
 	</div>
