--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<a href="#" id="play"><svg width="2em"><use xlink:href="#icon-pause"/></svg></a>
 		</div>
 		<form id="search"  action="javascript:void(0);">
-			<input id="q" name="q" autofocus="true" autocomplete="off" placeholder="Search SoundCloud">
+			<input id="q" name="q" autofocus="true" spellcheck="false" autocomplete="off" placeholder="Search SoundCloud">
 			<input type="hidden" name="client_id" value="0bcc7c4bcd2b5b55b23ab538c02f70c0">
 			<input type="hidden" name="order" value="hotness">
 			<input type="hidden" name="streamable" value="true">
