--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 	<div class="wrapper">
 		<div id="controls">
 				<a href="#" id="play"><svg width="2em"><use xlink:href="#icon-pause"/></svg></a>
+				<input type="hidden" value="80" id="volume"/>
 		</div>
 		<form id="search"  action="javascript:void(0);">
 			<input id="q" name="q" autofocus="true" spellcheck="false" autocomplete="off" placeholder="Search SoundCloud">
